feat(auth): ST-81 send and check e-mail confirmation links
